Fix safari column rendering bug causing invisible or incorrectly places environment boxes.

--- a/src/style.css
+++ b/src/style.css
@@ -54,4 +54,7 @@
 #environment_table>div {
 	width: 38em;
 	margin: 0 auto 1.5em auto;
+	break-inside: avoid;
+	will-change: opacity;
+	box-shadow: 0px 9px 16px rgba(159, 162, 191, .18), 0px 2px 2px rgba(159, 162, 191, 0.32);
 }
